# W210_Capstone_ShoppingBuddy

./: README.md  main.py  productDetails.py  pyproject.toml  streamlitapp.py
data/pickle/: test.csv
